--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -4,7 +4,8 @@
 body,html{
   padding: 0;
   margin: 0;
-  background-color: var(--background-color);
+  background-color: var(--p-color);
+  transition: background-color @transition-time;
 }
 
 .justify-space-between{
