--- a/src/assets/variable.less
+++ b/src/assets/variable.less
@@ -1,7 +1,11 @@
+@transition-time: 0.2s;
+@aside-bar-button-width:40px;
+
 @p-color-light:#fdfdfd;
 @p-color-dark:#0d1117;
 
 @p-text-color-dark:#fdfdfd;
 @p-text-color-light: #020202;
 
-@box-border-color: #7a7a7a;
+@box-border-color-dark: #3D444DFF;
+@box-border-color-light: #D1D9E0FF;
