--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -3,12 +3,16 @@
 :root[theme="light"]{
   --p-color: @p-color-light;
   --p-text-color: @p-text-color-light;
+  --s-text-color:@s-text-color-light;
   --border-color: @box-border-color-light;
   --theme-button-image: url('icons/aside-bar/theme-button-moon.png');
+  --bg-color-nav:@bg-color-nav-light;
 }
 :root[theme="dark"]{
   --p-color: @p-color-dark;
   --p-text-color: @p-text-color-dark;
+  --s-text-color:@s-text-color-dark;
   --border-color: @box-border-color-dark;
   --theme-button-image:url('icons/aside-bar/theme-button-son.png');
+  --bg-color-nav:@bg-color-nav-dark;
 }
