--- a/src/assets/variable.less
+++ b/src/assets/variable.less
@@ -1,11 +1,18 @@
-@transition-time: 0.2s;
-@aside-bar-button-width:40px;
-
+@transition-time: 0.2s;   //动画时间
+@nav-bar-button-width:40px;  //nav按钮大小
+@border-1-solid:1px solid var(--border-color);
+//nav背景颜色
+@bg-color-nav-light:#f6f8fa;
+@bg-color-nav-dark:#010409;
+//主要背景颜色
 @p-color-light:#fdfdfd;
 @p-color-dark:#0d1117;
-
+//主要文字颜色
 @p-text-color-dark:#fdfdfd;
 @p-text-color-light: #020202;
-
+//次要文字颜色
+@s-text-color-dark:#9198A1FF;
+@s-text-color-light:#59636EFF;
+//border颜色
 @box-border-color-dark: #3D444DFF;
 @box-border-color-light: #D1D9E0FF;
