--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -14,4 +14,12 @@ body,html{
   align-items: center;
 }
 
+.full-screen{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 
