--- a/src/assets/variable.less
+++ b/src/assets/variable.less
@@ -1,6 +1,7 @@
 @transition-time: 0.2s;   //动画时间
 @nav-bar-button-width:40px;  //nav按钮大小
-@border-1-solid:1px solid var(--border-color);
+@border-1-solid:1px solid var(--border-color);  //边框
+@nav-padding:15px;   //nav padding
 //nav背景颜色
 @bg-color-nav-light:#f6f8fa;
 @bg-color-nav-dark:#010409;
