--- a/src/assets/variable.less
+++ b/src/assets/variable.less
@@ -1,4 +1,8 @@
-@transition-time: 0.2s;   //动画时间
+//设备大小
+@pad-width:1024px;
+@mobile-width:600px;
+//动画时间
+@transition-time: 0.2s;
 @nav-bar-button-width:40px;  //nav按钮大小
 @border-1-solid:1px solid var(--border-color);  //边框
 @nav-padding:15px;   //nav padding
@@ -8,6 +12,12 @@
 //主要背景颜色
 @p-color-light:#fdfdfd;
 @p-color-dark:#0d1117;
+// 蓝色
+@p-blue-light:rgb(9, 105, 218);
+@p-blue-dark:rgb(68, 147, 248);
+//满屏 backdrop颜色
+@backdrop-bgColor-light:#c8d1da66;
+@backdrop-bgColor-dark:#21283066;
 //主要文字颜色
 @p-text-color-dark:#fdfdfd;
 @p-text-color-light: #020202;
@@ -17,3 +27,6 @@
 //border颜色
 @box-border-color-dark: #3D444DFF;
 @box-border-color-light: #D1D9E0FF;
+//box shadow样式
+@shadow-floating-light:0px 0px 0px 1px #d1d9e0, 0px 40px 80px 0px #25292e3d;
+@shadow-floating-dark:0px 0px 0px 1px #3d444d, 0px 24px 48px 0px #010409;
