--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -7,6 +7,9 @@
   --border-color: @box-border-color-light;
   --theme-button-image: url('icons/aside-bar/theme-button-moon.png');
   --bg-color-nav:@bg-color-nav-light;
+  --backdrop-bgColor:@backdrop-bgColor-light;
+  --shadow-floating:@shadow-floating-light;
+  --p-blue:@p-blue-light;
 }
 :root[theme="dark"]{
   --p-color: @p-color-dark;
@@ -15,4 +18,7 @@
   --border-color: @box-border-color-dark;
   --theme-button-image:url('icons/aside-bar/theme-button-son.png');
   --bg-color-nav:@bg-color-nav-dark;
+  --backdrop-bgColor:@backdrop-bgColor-dark;
+  --shadow-floating:@shadow-floating-dark;
+  --p-blue:@p-blue-dark;
 }
