--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -10,6 +10,7 @@
   --backdrop-bgColor:@backdrop-bgColor-light;
   --shadow-floating:@shadow-floating-light;
   --p-blue:@p-blue-light;
+  --hover-bg-color:@hover-bg-color-light;
 }
 :root[theme="dark"]{
   --p-color: @p-color-dark;
@@ -21,4 +22,5 @@
   --backdrop-bgColor:@backdrop-bgColor-dark;
   --shadow-floating:@shadow-floating-dark;
   --p-blue:@p-blue-dark;
+  --hover-bg-color:@hover-bg-color-dark;
 }
