--- a/src/assets/variable.less
+++ b/src/assets/variable.less
@@ -1,6 +1,8 @@
 //设备大小
 @pad-width:1024px;
 @mobile-width:600px;
+@nav-height:68px;//nav高度
+@left-aside-width:250px;
 //动画时间
 @transition-time: 0.2s;
 @nav-bar-button-width:40px;  //nav按钮大小
@@ -30,3 +32,6 @@
 //box shadow样式
 @shadow-floating-light:0px 0px 0px 1px #d1d9e0, 0px 40px 80px 0px #25292e3d;
 @shadow-floating-dark:0px 0px 0px 1px #3d444d, 0px 24px 48px 0px #010409;
+// hover颜色
+@hover-bg-color-light: #e8e8e8;
+@hover-bg-color-dark: #272727;
