--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,20 +1,22 @@
 @import "@/assets/variable.less";
 @import "@/assets/theme.less";
 
-body,html{
+body, html {
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
   background-color: var(--p-color);
   transition: background-color @transition-time;
 }
 
-.justify-space-between{
+.justify-space-between {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.full-screen{
+.full-screen {
   position: absolute;
   top: 0;
   left: 0;
@@ -22,11 +24,18 @@ body,html{
   bottom: 0;
 }
 
-.flex-center{
+.flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+
+.hover-bg-color() {
+  cursor: pointer;
+  &:hover {
+    background-color: var(--hover-bg-color);
+  }
+}
 
 
