dev:repos card info

--- a/src/assets/variable.less
+++ b/src/assets/variable.less
@@ -1,38 +1,50 @@
 //设备大小
-@pad-width:1024px;
-@mobile-width:600px;
-@nav-height:68px;//nav高度
-@left-aside-width:250px;
+@pad-width: 1024px;
+@mobile-width: 600px;
+@nav-height: 68px; //nav高度
+@left-aside-width: 250px;
 //动画时间
 @transition-time: 0.2s;
-@nav-bar-button-width:40px;  //nav按钮大小
-@border-1-solid:1px solid var(--border-color);  //边框
-@nav-padding:15px;   //nav padding
+@nav-bar-button-width: 40px; //nav按钮大小
+@border-1-solid: 1px solid var(--border-color); //边框
+@nav-padding: 15px; //nav padding
 //nav背景颜色
-@bg-color-nav-light:#f6f8fa;
-@bg-color-nav-dark:#010409;
+@bg-color-nav-light: #f6f8fa;
+@bg-color-nav-dark: #010409;
 //主要背景颜色
-@p-color-light:#fdfdfd;
-@p-color-dark:#0d1117;
+@p-color-light: #fdfdfd;
+@p-color-dark: #0d1117;
 // 蓝色
 
-@p-blue-light:rgb(68, 147, 248);
-@p-blue-dark:rgb(9, 105, 218);
+@p-blue-light: rgb(68, 147, 248);
+@p-blue-dark: rgb(9, 105, 218);
 //满屏 backdrop颜色
-@backdrop-bgColor-light:#c8d1da66;
-@backdrop-bgColor-dark:#21283066;
+@backdrop-bgColor-light: #c8d1da66;
+@backdrop-bgColor-dark: #21283066;
 //主要文字颜色
-@p-text-color-dark:#fdfdfd;
+@p-text-color-dark: #fdfdfd;
 @p-text-color-light: #020202;
 //次要文字颜色
-@s-text-color-dark:#9198A1FF;
-@s-text-color-light:#59636EFF;
+@s-text-color-dark: #9198A1FF;
+@s-text-color-light: #59636EFF;
 //border颜色
 @box-border-color-dark: #3D444DFF;
 @box-border-color-light: #D1D9E0FF;
 //box shadow样式
-@shadow-floating-light:0px 0px 0px 1px #d1d9e0, 0px 40px 80px 0px #25292e3d;
-@shadow-floating-dark:0px 0px 0px 1px #3d444d, 0px 24px 48px 0px #010409;
+@shadow-floating-light: 0px 0px 0px 1px #d1d9e0, 0px 40px 80px 0px #25292e3d;
+@shadow-floating-dark: 0px 0px 0px 1px #3d444d, 0px 24px 48px 0px #010409;
 // hover颜色
 @hover-bg-color-light: #e8e8e8;
 @hover-bg-color-dark: #272727;
+
+
+@languageColors: {
+'TypeScript': '#3178C6',
+'JavaScript': '#F1E05A',
+'Vue': '#41B883';
+'Python': '#3572A5',
+'HTML': '#E34C26',
+'CSS': '#663399',
+'C++': '#F34B7D',
+'C': '#555555'
+};
