--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -11,6 +11,8 @@
   --shadow-floating:@shadow-floating-light;
   --p-blue:@p-blue-light;
   --hover-bg-color:@hover-bg-color-light;
+  --p-button-bgColor-reset:@p-button-bgColor-reset-light;
+  --p-button-bgColor-hover:@p-button-bgColor-hover-light;
 }
 :root[theme="dark"]{
   --p-color: @p-color-dark;
@@ -23,4 +25,6 @@
   --shadow-floating:@shadow-floating-dark;
   --p-blue:@p-blue-dark;
   --hover-bg-color:@hover-bg-color-dark;
+  --p-button-bgColor-reset:@p-button-bgColor-reset-dark;
+  --p-button-bgColor-hover:@p-button-bgColor-hover-dark;
 }
