--- a/src/assets/variable.less
+++ b/src/assets/variable.less
@@ -1,6 +1,6 @@
 //设备大小
 @pad-width: 1024px;
-@mobile-width: 600px;
+@mobile-width: 750px;
 @nav-height: 68px; //nav高度
 @left-aside-width: 250px;
 //动画时间
@@ -14,8 +14,12 @@
 //主要背景颜色
 @p-color-light: #fdfdfd;
 @p-color-dark: #0d1117;
+//按钮
+@p-button-bgColor-reset-dark:#238636;
+@p-button-bgColor-hover-dark:#29903b;
+@p-button-bgColor-reset-light:#1f883d;
+@p-button-bgColor-hover-light:#1c8139;
 // 蓝色
-
 @p-blue-light: rgb(68, 147, 248);
 @p-blue-dark: rgb(9, 105, 218);
 //满屏 backdrop颜色
