dev:dependencies less

--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -13,6 +13,9 @@
   --hover-bg-color:@hover-bg-color-light;
   --p-button-bgColor-reset:@p-button-bgColor-reset-light;
   --p-button-bgColor-hover:@p-button-bgColor-hover-light;
+  --scrollbar-bg-color:@scrollbar-bg-color-light;
+  --scrollbar-thumb-bg-color:@scrollbar-thumb-bg-color-light;
+  --scrollbar-thumb-bg-color-hover:@scrollbar-thumb-bg-color-hover-light;
 }
 :root[theme="dark"]{
   --p-color: @p-color-dark;
@@ -27,4 +30,7 @@
   --hover-bg-color:@hover-bg-color-dark;
   --p-button-bgColor-reset:@p-button-bgColor-reset-dark;
   --p-button-bgColor-hover:@p-button-bgColor-hover-dark;
+  --scrollbar-bg-color:@scrollbar-bg-color-dark;
+  --scrollbar-thumb-bg-color:@scrollbar-thumb-bg-color-dark;
+  --scrollbar-thumb-bg-color-hover:@scrollbar-thumb-bg-color-hover-dark;
 }
